Fixed main banner on mobile

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2167,7 +2167,7 @@ a.post-tags:hover {
   }
   .navbar-brand > img {
     width: 100px;
-    margin-top: 16px;
+    margin-top: 10px;
   }
   .white-header .navbar-brand.not-show img {
     margin-top: 10px;
@@ -2194,6 +2194,7 @@ a.post-tags:hover {
   .home-main {
     min-height: 210px;
     background-size: cover;
+    background-position: center;
   }
   .text-container {
     padding-top: 50px;
